bohot kaam karliya

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@gluestack-ui/overlay": "^0.1.20",
     "@gluestack-ui/toast": "^1.0.9",
     "@google/generative-ai": "^0.21.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -44,6 +46,7 @@
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
