--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-ui/actionsheet": "^0.2.50",
     "@gluestack-ui/button": "^1.0.12",
     "@gluestack-ui/icon": "^0.1.25",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.20",
     "@gluestack-ui/toast": "^1.0.9",
     "@google/generative-ai": "^0.21.0",
+    "@legendapp/motion": "^2.4.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -46,6 +49,7 @@
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.2.0",
