--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@google/generative-ai": "^0.21.0",
     "@legendapp/motion": "^2.4.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~52.0.35",
+    "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.6",
     "expo-font": "~13.0.3",
@@ -52,9 +53,9 @@
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.2.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwind-react-native-classnames": "^3.0.1",
@@ -66,7 +67,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "~52.0.5",
     "jscodeshift": "^0.15.2",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
